--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "abstract-state-router": "^6.0.3",
+    "awesomplete": "git+https://github.com/subpx/awesomplete.git",
     "flatpickr": "^4.1.2",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
