--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --config webpack.config/webpack.config.dev.js --open",
+    "dev": "node build-scripts/copy-assets.js && webpack-dev-server --config webpack.config/webpack.config.dev.js --open",
     "unit-test": "webpack --config webpack.config/webpack.config.test.js --watch",
     "e2e-test": "node_modules/.bin/cypress open",
     "build": "webpack --config webpack.config/webpack.config.build.js --display-error-details",
@@ -22,7 +22,10 @@
     "babel-eslint": "^8.0.2",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "chalk": "^2.3.0",
+    "cpy-cli": "^1.0.1",
     "css-loader": "^0.28.7",
+    "cypress": "^1.1.2",
     "eslint": "^4.12.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -31,10 +34,10 @@
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "cypress": "^1.1.2",
     "glob": "^7.1.2",
     "path": "^0.12.7",
     "prettier": "^1.8.2",
+    "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
     "stylelint": "^8.3.1",
     "stylelint-config-standard": "^18.0.0",
