--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "abstract-state-router": "^6.0.3",
     "awesomplete": "git+https://github.com/subpx/awesomplete.git",
     "flatpickr": "^4.1.2",
+    "i18next": "^10.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "qs": "^6.5.1",
