--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "prettier": "^1.8.2",
     "shelljs": "^0.7.8",
     "style-loader": "^0.19.0",
+    "stylelint": "^8.3.1",
+    "stylelint-config-standard": "^18.0.0",
+    "stylelint-processor-html": "^1.0.0",
+    "stylelint-webpack-plugin": "^0.9.0",
     "svelte-loader": "2.1.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
