--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,6 +2,8 @@
   "extends": "stylelint-config-standard",
   "processors": ["stylelint-processor-html"],
   "rules": {
-    "no-empty-source": null
+    "no-empty-source": null,
+    "selector-type-no-unknown": null,
+    "selector-pseudo-class-no-unknown": null
   }
 }
