--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "stylelint-processor-html": "^1.0.0",
     "stylelint-webpack-plugin": "^0.9.0",
     "svelte-loader": "2.1.0",
+    "svg-url-loader": "^2.3.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
     "tape-run": "^3.0.0",
@@ -59,7 +60,7 @@
   },
   "dependencies": {
     "abstract-state-router": "^6.0.3",
-    "awesomplete": "git+https://github.com/subpx/awesomplete.git",
+    "choices.js": "^3.0.2",
     "flatpickr": "^4.1.2",
     "i18next": "^10.2.1",
     "lodash": "^4.17.4",
