--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "abstract-state-router": "^6.0.3",
     "choices.js": "^3.0.2",
     "flatpickr": "^4.1.2",
+    "hash-brown-router": "^3.3.1",
     "i18next": "^10.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "qs": "^6.5.1",
+    "sausage-router": "^1.1.2",
     "sortablejs": "^1.7.0",
     "svelte": "^1.43.1",
     "svelte-state-renderer": "^1.2.5",
