--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "eslint-plugin-prettier": "^2.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.2",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-template": "^4.0.0",
+    "gulp-util": "^3.0.8",
     "lodash-webpack-plugin": "^0.11.4",
     "path": "^0.12.7",
     "prettier": "^1.8.2",
